--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 .wrapper {
   background-color: #19181a;
   border: 1px solid black;
-  display: flex;
+  /* display: flex; */
   width: 700px;
   height: 600px;
   margin: 10px;
@@ -17,7 +17,7 @@ body {
   position: fixed;
   top: 75px;
   left: 120px;
-  overflow: scroll;
+  overflow-y: scroll;
   color: aliceblue;
 }
 
